--- a/estilos.css
+++ b/estilos.css
@@ -161,6 +161,7 @@ main #parques{
     #irmaos{ width:60%; }
     #primeiros-anos{ width:60%; }
     #filmes{ width: 70%; }
+    #parques img{ width:60%; }
 }
 
 
