--- a/estilos.css
+++ b/estilos.css
@@ -193,6 +193,7 @@ main #parques{
         border: none;
         font-size: 1em;
         margin-top: 0.5em;
+        color: white;
     }
 
     .nav-list{
